tests/cases/generics/errors/generic-private-function.ari
mod Hidden {
  fn identity[T](value: T) -> T {
    value
  }
}

fn main() -> i64 {
  Hidden::identity<i64>(1)
}
